--- a/application.yml
+++ b/application.yml
@@ -2,4 +2,17 @@ server:
   port: 0
 spring:
   application:
-    name: global-config
+    name: global-configmanagement:
+  endpoints:
+    web:
+      exposure:
+        include: health, info
+  endpoint:
+    health:
+      show-details: always
+
+spring:
+  security:
+    user:
+      name: admin
+      password: admin123
