add api-gateway config

--- a/application.yml
+++ b/application.yml
@@ -2,7 +2,7 @@ server:
   port: 0
 spring:
   application:
-    name: global-configmanagement:
+    name: global-configmanagement
   endpoints:
     web:
       exposure:
